--- a/src/Main.mxml
+++ b/src/Main.mxml
@@ -1,16 +1,13 @@
 <?xml version="1.0"?>
 <s:Application xmlns:fx="http://ns.adobe.com/mxml/2009" xmlns:s="library://ns.adobe.com/flex/spark"
-               xmlns:context="com.alix.context.*" xmlns:view="com.alix.view.*" addedToStage="addedToStage()">
+               xmlns:context="com.alix.context.*" xmlns:view="com.alix.view.*" addedToStage="addedToStage()" frameRate="60" backgroundColor="#2b2b2b">
     <view:ApplicationView width="100%" height="100%" />
     <fx:Declarations>
         <context:ApplicationContext contextView="{this}" />
     </fx:Declarations>
     <fx:Script><![CDATA[
-
         private function addedToStage():void
         {
-            trace("addedToStage");
-
             //stub to hide right-click menu
             stage.addEventListener(MouseEvent.RIGHT_CLICK, function (e:MouseEvent) { });
         }
